syntax = "proto3";
package auth;

//
// Services

service Authorizer {
  rpc AuthorizeTransaction(AuthRequest) returns (AuthReply) {}
}

//
// Models

//
// Authorization

message AuthRequest {
  string name = 1;
}

message AuthReply {
  string message = 1;
}